k8s/Staff/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staff
  template:
    metadata:
      labels:
        app: staff
    spec:
      containers:
        - image: staff-service:2
          imagePullPolicy: Never
          name: staff
          ports:
            - containerPort: 8080
