k8s/Staff/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staff-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: staff
