k8s/Staff/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staff-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/staff
            pathType: "Prefix"
            backend:
              service:
                name: staff-service
                port:
                  number: 80
